zooming in to route pretty much

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body ng-controller="DelaysController">
 
         <div>
-            <input type="date" ng-model="date" />
-            <input type="text" ng-model="from_station" />
-            <input type="text" ng-model="to_station" />
+            <input type="date" id="date" />
+            <select id="from_station"></select>
+            <select id="to_station"></select>
         </div>
 
         <section id="map">
