map colouring works

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script src="plugins/sigma.plugins.animate.min.js" charset="utf-8"></script>
         <script src="plugins/sigma.layout.forceAtlas2.min.js" charset="utf-8"></script>
         <script src="plugins/sigma.plugins.dragNodes.min.js" charset="utf-8"></script>
+        <script src="plugins/sigma.pathfinding.astar.js" charset="utf-8"></script>
         <!--<script src="angular.min.js" charset="utf-8"></script>-->
         <script src="app.js" charset="utf-8"></script>
     </body>
